--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
   "devDependencies": {
     "dotenv": "^8.1.0",
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "hbs": "^4.0.4",
+    "mongodb": "^3.3.2"
   }
 }
