add auto reload page feature for production

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/attainu-nightingale/au3_sd_ngo-portal#readme",
   "devDependencies": {
     "dotenv": "^8.1.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "reload": "^3.0.1"
   },
   "dependencies": {
     "express": "^4.17.1",
