--- a/package.json
+++ b/package.json
@@ -32,8 +32,13 @@
     "reload": "^3.0.1"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "hbs": "^4.0.4",
-    "mongodb": "^3.3.2"
+    "helmet": "^3.21.0",
+    "mongodb": "^3.3.2",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1"
   }
 }
