--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^3.21.0",
     "mongodb": "^3.3.2",
     "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^2.2.1"
+    "multer-storage-cloudinary": "^2.2.1",
+    "shortid": "^2.2.15"
   }
 }
