--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hapi/joi": "^15.1.1",
     "@sendgrid/mail": "^6.4.0",
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.15.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "hbs": "^4.0.4",
