--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongodb": "^3.3.2",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
+    "req-flash": "0.0.3",
     "shortid": "^2.2.15"
   }
 }
